  (David Soria Parra)

- Deprecated define_syslog_variables(). (Kalle)
- Deprecated ereg extension. (Felipe)

- Fixed bug causing the algorithm parameter of mhash() to be modified. (Scott)
- Fixed invalid calls to free when internal fileinfo magic file is used. (Scott)
- Fixed memory leak inside wddx_add_vars() function. (Felipe)
- Synced changes from libmagic 4.26 to bundled libmagic. (Scott)

- Fixed bug #46711 (cURL curl_setopt leaks memory in foreach loops).
  (magicaltux [at] php [dot] net)
- Fixed bug #46578 (strip_tags() does not honor end-of-comment when it 
  encounters a single quote). (Felipe)
- Fixed bug #46546 (Segmentation fault when using declare statement with
  non-string value). (Felipe)
- Fixed bug #46421 (SplFileInfo not correctly handling /). (Etienne)
- Fixed bug #46409 (__invoke method called outside of object context when using
  array_map). (Dmitry)
- Fixed bug #46331 - (Segfault when using internal fileinfo magic file on big
  endian systems). (Scott)
- Fixed bug #46285 (lastInsertId() returns "0" when a deferenced PDOStatement is
  executed). (Johannes)
- Fixed bug #46241 (stacked error handlers, internal error handling in general). 
  (Etienne)
- Fixed bug #46238 (Segmentation fault on static call with empty string method).
  (Felipe)
- Fixed bug #46205 (Closure - Memory leaks when ReflectionException is thrown).
  (Dmitry)
- Fixed bug #46194 (SIGSEGV when requested file is not found). (Greg)
- Fixed bug #46192 (ArrayObject with objects as storage serialization).
  (Etienne)
- Fixed bug #46185 (importNode changes the namespace of an XML element). (Rob)
- Fixed bug #46178 (memory leak in ext/phar). (Greg)
- Fixed bug #46160 (SPL - Memory leak when exception is thrown in offsetSet).
  (Felipe)
- Fixed Bug #46147 (after stream seek, appending stream filter reads incorrect data).
  (Greg)
- Fixed bug #46127 (php_openssl_tcp_sockop_accept forgets to set context
  on accepted stream) (Mark Karpeles, Pierre)